--- a/Stellar/index.html
+++ b/Stellar/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Екатеринбург недвижимость, доходная недвижимость, ипотека, потребительское и ипотечное кредитования, помощь в восстановлении кредитной истории, доходная система">
+	<meta name="description" content="stellar, stellar pro, доходная недвижимость, ипотека, восстановление кредитной истории, агентство недвижимости stellar, стеллар про">
 	<title>Stellar</title>
 	<link rel="icon" href="img/favicon.ico" sizes="16x16">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,7 +25,7 @@
 		
 				<div class="col-xl-1 col-md-2 col-sm-2 col-3">
 					<div class="logo">
-						<a href="#">
+						<a href="https://www.stellar-pro.org">
 							<img src="img/logo-white.webp" alt="Логотип">
 							<h2>Stellar</h2>
 						</a>
@@ -235,8 +235,8 @@
 			</div>
 
 			<p class="rates-sub-title wow fadeIn" data-wow-delay="2.2s">
-				Создай ресурсы для жизни и развития. <br>
-				Нужно только Твое решение действовать.
+				Создай ресурсы для жизни и развития <br>
+				Нужно только Твое решение действовать
 			</p>
 
 		</div>
@@ -331,7 +331,7 @@
 					<h2 class="title">Отзывы на Флампе</h2>
 					<a class="flamp-widget" href="//ekaterinburg.flamp.ru/firm/stellar_agentstvo_nedvizhimosti_ooo_stellar-70000001061388919"  data-flamp-widget-type="responsive-new" data-flamp-widget-id="70000001061388919" data-flamp-widget-width="100%" data-flamp-widget-count="1">Отзывы о нас на Флампе</a><script>!function(d,s){var js,fjs=d.getElementsByTagName(s)[0];js=d.createElement(s);js.async=1;js.src="//widget.flamp.ru/loader.js";fjs.parentNode.insertBefore(js,fjs);}(document,"script");</script>
 				</div>
-
+				
 				<div class="col-lg-5 offset-lg-2 col-sm-8 offset-sm-2 col-10 offset-1" id="form">
 					<h2 class="title">Готов начать?</h2>
 					<div class="form wow bounceInRight" data-wow-duration="2s" data-wow-delay="0.2s">
@@ -407,21 +407,21 @@
 
 		<div class="container">
 			<div class="row">
-				<div class="col-md-2 col-sm-3 col-12">
+				<div class="col-md-3 col-sm-4 col-12">
 					<p><a href="mailto:sales@stellar-pro.org">sales@stellar-pro.org</a></p>
 					<p><a href="tel:+79992867463">+7 (999) 286 74 63</a></p>
 				</div>
 			
-				<div class="col-md-2 col-sm-4 col-12 offset-sm-1 text-center">
+				<div class="col-md-3 col-sm-4 col-12 text-center">
 					<p class="txt-s"><a href="http://stellar-pro.org/docs/Informacionnaya_politika.pdf">Ведение деятельности</a></p>
 					<p class="txt-s"><a href="http://stellar-pro.org/docs/Informacionnaya_politika.pdf">Информационная политика</a></p>
 				</div>
-				<div class="col-md-2 col-sm-4 col-12 text-center">
+				<div class="col-md-3 col-sm-4 col-12 text-center">
 					<p class="txt-s"><a href="http://stellar-pro.org/docs/Rekvizity.pdf">Карточка компании (реквизиты)
 	Ведение деятельности Информационная политика</a></p>
 				</div>
-				<div class="col-md-4 offset-md-1 col-12 text-end">
-					<p>Дизайн и разработка сайта: <a href="https://vk.com/ziscander">Александр Шмик</a></p>
+				<div class="col-md-3 col-12 text-end">
+					<p>Дизайн и разработка сайта: <a href="https://vk.com/ziscander">Александр&nbsp;Шмик</a></p>
 					<p>Stellar <sup>©</sup>, 2023</p>
 				</div>
 			</div>
