--- a/vishivka/contacts.html
+++ b/vishivka/contacts.html
@@ -61,8 +61,8 @@
 		 					<li class="nav-list-item">
 		 						<a href="info.html" class="social-link">Информация</a>
 		 					</li>
-		 					<li class="nav-list-item social-link_active">
-		 						<a href="contacts.html" class="social-link">Контакты</a>
+		 					<li class="nav-list-item">
+		 						<a class="social-link social-link_active" href="contacts.html">Контакты</a>
 		 					</li>
 		 				</ul>
 		 			</div>	
@@ -100,36 +100,6 @@
 		<!-- </div> -->
 	</section>
 
-	<!-- Футер -->
-		<footer class="footer">
-			<div class="container">
-				<div class="row">
-					<div class="col-4 offset-4">
-
-						<div class="footer-block">
-							<a href="tel:89122913917" class="social-link footer__link ">8 (912) 291 39 17</a>
-						
-							<a class="social-link_footer social-link__whatsapp" href="https://wa.me/79126833062?text=Здравствуйте%2C+я+хочу+заказать+вышивку" target="_blank"><i class="fi fi-brands-whatsapp"></i></a>
-		
-							<a class="social-link_footer social-link__vk" href="https://vk.com/vishivka__196" target="_blank"><i class="fi fi-brands-vk"></i></a>
-		
-							<a class="social-link_footer social-link__instagram" href="https://instagram.com/vishivka_196?igshid=ZDdkNTZiNTM=" target="_blank"><i class="fi fi-brands-instagram"></i></a>
-						</div>
-
-					</div>
-
-				</div>
-					
-				<div class="row">
-					<div class="col-9">
-						<p class="footer__txt">2023 &copy; Все права защищены. Копирование любых графических и текстовых материалов запрещено. <br> Продолжая просмотр сайта, вы соглашаетесь на обработку персональных данных передаваемых через форму.</p>
-					</div>
-					<div class="col-3">
-						<p class="footer__txt">Разработка сайта: <a href="https://vk.com/ziscander" class="footer__link">Александр Шмик</a></p>
-					</div>
-				</div>
-			</div>
-		</footer>
 
 	<!-- Модальное окно -->
 		<div class="popup">
@@ -177,7 +147,7 @@
 			});
 		});
 
-	</script>https://
+	</script>
 
 </body>
 </html>
