--- a/vishivka/index.html
+++ b/vishivka/index.html
@@ -102,10 +102,9 @@
 	<footer class="footer">
 		<div class="container">
 			<div class="row">
-				<div class="col-4 offset-4">
+				<div class="col-2 offset-5">
 
 					<div class="footer-block">
-						<a href="tel:89122913917" class="social-link footer__link ">8 (912) 291 39 17</a>
 					
 						<a class="social-link_footer social-link__whatsapp" href="https://wa.me/79126833062?text=Здравствуйте%2C+я+хочу+заказать+вышивку" target="_blank"><i class="fi fi-brands-whatsapp"></i></a>
 	
@@ -119,13 +118,17 @@
 			</div>
 				
 			<div class="row">
-				<div class="col-9">
-					<p class="footer__txt">2023 &copy; Все права защищены. Копирование любых графических и текстовых материалов запрещено. <br> Продолжая просмотр сайта, вы соглашаетесь на обработку персональных данных передаваемых через форму.</p>
+				<div class="col-12">
+					<p class="footer__txt">Vishivka_196 2023 &copy; Все права защищены. Копирование любых графических и текстовых материалов запрещено. Продолжая просмотр сайта, вы соглашаетесь на обработку персональных данных передаваемых через форму.</p>
 				</div>
-				<div class="col-3">
+			</div>
+
+			<div class="row">
+				<div class="col-3 offset-9">
 					<p class="footer__txt">Разработка сайта: <a href="https://vk.com/ziscander" class="footer__link">Александр Шмик</a></p>
 				</div>
 			</div>
+
 		</div>
 	</footer>
 
