--- a/vishivka/about.html
+++ b/vishivka/about.html
@@ -79,12 +79,12 @@
 				<div class="col-10 offset-1">
 					<img src="#" alt="">
 					<h2 class="title about-title">О нас</h2>
-					<p class="sub-title text-center">
+					<p class="sub-title">
 	<strong>Студия Vishivka_196</strong> предлагает вам услуги качественной вышивки практически на любых материалах. На современном оборудовании ваши логотипы, знаки отличия, шевроны и эмблемы будут нанесены на кепки, майки, толстовки, рабочую одежду, чехлы и многое другое. 
 
-	Мы выполняем машинную вышивку в различных вариантах техники в зависимости от пожеланий заказчика. 
+Мы выполняем машинную вышивку в различных вариантах техники в зависимости от пожеланий заказчика. 
 
-	Мы предлагаем вам уникальные работы на заказ по эскизу, разработанному специально для корпоративных атрибутов.
+Мы предлагаем вам уникальные работы на заказ по эскизу, разработанному специально для корпоративных атрибутов.
 
 
 						<h3 class="title about__title">Преимущества сотрудничества с Vishivka_196:</h3>
@@ -92,7 +92,7 @@
 							<li class="about__item"> - Свое производство</li>
 							<li class="about__item"> - Оперативность (в расчетах, сроках, ответах)</li>
 							<li class="about__item"> - Индивидуальный подход</li>
-							<li class="about__item"> - Сами занимаемся разработкой дизайнов вышивки, что позволяет https://создавать и дорабатывать макеты по вашим пожеланиям.</li>
+							<li class="about__item"> - Сами занимаемся разработкой дизайнов вышивки, что позволяет создавать и дорабатывать макеты по вашим пожеланиям.</li>
 							<li class="about__item"> - Доступные цены.</li>
 							<li class="about__item"> - Заказы от 1 ед.</li>
 						</ul>
@@ -102,84 +102,6 @@
 		</div>
 	</section>
 
-	<!-- Футер -->
-		<footer class="footer">
-			<div class="container">
-				<div class="row">
-					<div class="col-4 offset-4">
-
-						<div class="footer-block">
-							<a href="tel:89122913917" class="social-link footer__link ">8 (912) 291 39 17</a>
-						
-							<a class="social-link_footer social-link__whatsapp" href="https://wa.me/79126833062?text=Здравствуйте%2C+я+хочу+заказать+вышивку" target="_blank"><i class="fi fi-brands-whatsapp"></i></a>
-		
-							<a class="social-link_footer social-link__vk" href="https://vk.com/vishivka__196" target="_blank"><i class="fi fi-brands-vk"></i></a>
-		
-							<a class="social-link_footer social-link__instagram" href="https://instagram.com/vishivka_196?igshid=ZDdkNTZiNTM=" target="_blank"><i class="fi fi-brands-instagram"></i></a>
-						</div>
-
-					</div>
-
-				</div>
-					
-				<div class="row">
-					<div class="col-9">
-						<p class="footer__txt">2023 &copy; Все права защищены. Копирование любых графических и текстовых материалов запрещено. <br> Продолжая просмотр сайта, вы соглашаетесь на обработку персональных данных передаваемых через форму.</p>
-					</div>
-					<div class="col-3">
-						<p class="footer__txt">Разработка сайта: <a href="https://vk.com/ziscander" class="footer__link">Александр Шмик</a></p>
-					</div>
-				</div>
-			</div>
-		</footer>
-
-	<!-- Модальное окно -->
-		<div class="popup">
-			<div class="popup-dialog">
-				<div class="popup-content">
-					<button class="popup-close">&times;</button>
-					<h3 class="popup-header">Оставьте заявку <br> и мы свяжемся с Вами</h3>
-					<div class="popup-form-block">
-						<form action="#" class="popup-form">
-
-							<div class="input-box">
-								<input type="text" id="name" class="popup-form-input" required><i class="fi popup-form__fi fi-sr-picpeople-filled"></i>
-								<label for="name" class="popup-form-label">Ваше имя</label>
-							</div>
-
-							<div class="input-box">
-								<input type="number" id="phone" class="popup-form-input" required><i class="fi popup-form__fi fi-sr-call-incoming"></i>
-								<label for="phone" class="popup-form-label">Ваш телефон</label>
-							</div>
-
-							<button class="popup-form-btn social__btn">Отправить</button>
-
-						</form>
-					</div>
-				</div>
-			</div>
-		</div>
-	<script src="js/jquery-3.6.3.min.js"></script>
-
-	<!-- модальное окно -->
-	<script>
-		$(document).ready(function(){
-					// модальное окно ОСТАВИТЬ ЗАЯВКУ
-			$('.popup-btn').on('click', function(event) {
-				event.preventDefault();
-				$('.popup').fadeIn('slow/900/fast', function() {
-				});
-				$('body').toggleClass('no-scroll');
-			});
-			$('.popup-close').on('click', function(event) {
-				event.preventDefault();
-				$('.popup').fadeOut('slow/400/fast', function() {
-				});
-				$('body').toggleClass('no-scroll');
-			});
-		});
-
-	</script>
 
 </body>
 </html>
