--- a/Stellar/index.html
+++ b/Stellar/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="stellar, stellar pro, доходная недвижимость, ипотека, восстановление кредитной истории, агентство недвижимости stellar, стеллар про">
+	<meta name="description" content="Stellar - это экосистема из инструментов. Операции с недвижимостью. Оптимизация финансовой нагрузки. Потребительское и ипотечное кредитования. Помощь в восстановлении кредитной истории. Содействие в сложных переговорах.">
+	<meta name="keywords" content="stellar, stellar pro, доходная недвижимость, ипотека, восстановление кредитной истории, агентство недвижимости stellar, стеллар про">
 	<title>Stellar</title>
 	<link rel="icon" href="img/favicon.ico" sizes="16x16">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
