--- a/vishivka/about.html
+++ b/vishivka/about.html
@@ -79,14 +79,12 @@
 				<div class="col-10 offset-1">
 					<img src="#" alt="">
 					<h2 class="title about-title">О нас</h2>
-					<p class="sub-title">
+					<p class="txt">
 	<strong>Студия Vishivka_196</strong> предлагает вам услуги качественной вышивки практически на любых материалах. На современном оборудовании ваши логотипы, знаки отличия, шевроны и эмблемы будут нанесены на кепки, майки, толстовки, рабочую одежду, чехлы и многое другое. 
 
 Мы выполняем машинную вышивку в различных вариантах техники в зависимости от пожеланий заказчика. 
 
 Мы предлагаем вам уникальные работы на заказ по эскизу, разработанному специально для корпоративных атрибутов.
-
-
 						<h3 class="title about__title">Преимущества сотрудничества с Vishivka_196:</h3>
 						<ul class="about__list">
 							<li class="about__item"> - Свое производство</li>
