--- a/vishivka/contacts.html
+++ b/vishivka/contacts.html
@@ -89,15 +89,15 @@
 						<div class="col-6">
 							<adress class="adress">
 								<h4 class="contacts__title">Адрес:</h4>
-								<p class="contacts__sub-title">г. Екатеринбург, пер. Автоматики 4Б, офис 235</p>
+								<p class="txt">г. Екатеринбург, пер. Автоматики 4Б, офис 235</p>
 							</adress>
-							<p class="contacts__title">Телефон: <a href="" class="contacts__sub-title social-link">8 (912) 683 30 62</a></p>
+							<p class="contacts__title">Телефон: <a href="" class="txt social-link">8 (912) 683 30 62</a></p>
 						</div>
 
 						<div class="col-5 offset-1">
 							<h4 class="contacts__title">Режим работы:</h4>
-							<p class="contacts__sub-title">Пн-Пт: 10:00 - 19:00</p>
-							<p class="contacts__title">E-mail: <a href="mailto:" class="contacts__sub-title social-link">ziscander@yandex.ru</a></p>
+							<p class="txt">Пн-Пт: 10:00 - 19:00</p>
+							<p class="contacts__title">E-mail: <a href="mailto:" class="txt social-link">ziscander@yandex.ru</a></p>
 						</div>
 
 
