--- a/vishivka/index.html
+++ b/vishivka/index.html
@@ -157,8 +157,9 @@
 			</div>
 		</div>
 	</div>
-	
+
 <script src="js/jquery-3.6.3.min.js"></script>
+<script src="js/bootstrap.js"></script>
 
 <!-- модальное окно -->
 <script>
