--- a/vishivka/info.html
+++ b/vishivka/info.html
@@ -67,11 +67,89 @@
 	 			</div>	
 	 		</div>
 
+	 		<hr id="hr__down">
+
 		</div>
 	</header>
 
 
+<!--  Секция информация -->
+
+	<section class="info">
+		<div class="container">
+
+			<div class="row">
+
+				<div class="col-10 offset-1">
+					<h2 class="title about-title">Информация</h2>
+					<h3 class="sub-title">Заказ</h3>
+					<p class="txt">
+						Индивидуальные заказы услуги вышивки рассчитываются по макету или техническому заданию Заказчика. Заявки принимаются в свободной форме на официальные мессенджеры компании <strong>"Vishivka_196"</strong> или через WhatsApp или Telegram.
+Цена вышивки определяется исходя из размеров вышивки, сложности рисунка, степени детализации, количества цветов, особенностей материала нанесения, тиража, особых условий заказа.
+Окончательная цена, макет и срок исполнения оговаривается и согласовывается с Заказчиком, и подтверждается письменно в переписке через электронную почту, официальные мессенджеры студии (ВК,Instagram, WhatsAp, Telegram).</p>
+
+				</div>
+
+			</div>
+
+			<div class="row">
+
+				<div class="col-5 offset-1">
+					
+						<div class="accordion accordion-flush info__accordion" id="accordionFlushExample">
+						  <div class="accordion-item">
+						    <h2 class="accordion-header" id="flush-headingOne">
+						      <button class="accordion-button collapsed info__accordion-header" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseTwo">
+						        Оплата:
+						      </button>
+						    </h2>
+						    <div id="flush-collapseOne" class="accordion-collapse collapse info__accordion-body txt" aria-labelledby="flush-headingOne">
+						      <div class="accordion-body accordion-item_bg">
+						      	<ol class="info__accordion-list">
+						      		<li class="li info__list-item">Оплата наличными средствами в офисе.</li>
+						      		<li class="li info__list-item">Оплата на расчетный счет.</li>
+						      		<li class="li info__list-item">Оплата через сервис СБП по номеру телефон.</li>
+						      	</ol>
+						      </div>
+						    </div>
+						  </div>
+					  </div>
+
+				</div>
+				<div class="col-5">
+					
+						<div class="accordion accordion-flush info__accordion" id="accordionFlushExample">
+						  <div class="accordion-item">
+						    <h2 class="accordion-header" id="flush-headingTwo">
+						      <button class="accordion-button collapsed info__accordion-header" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+						      	Доставка:
+						      </button>
+						    </h2>
+						    <div id="flush-collapseTwo" class="accordion-collapse collapse info__accordion-body txt" aria-labelledby="flush-headingTwo">
+						      <div class="accordion-body accordion-item_bg">
+						      	<ol class="info__accordion-list">
+						      		<li class="li info__list-item">Почтой России<span class="txt">(стоимость доставки от 250р, расчитывается индивидуально)</span></li>
+						      		<li class="li info__list-item">Курьерской службой СДЭК<span class="txt">(стоимость доставки от 300р)</span></li>
+						      		<li class="li info__list-item">Транспортными компаниями, дополнительно оплачивается забор груза с производства.</li>
+						      		<li class="li info__list-item">По Екатеринбургу доставка возможна сервисом Яндекс.Доставка<span class="txt">(по тарифам перевозчика)</span>.</li>
+						      		<li class="li info__list-item">Самовывоз из офиса компании.</li>
+						      	</ol>
+						      </div>
+						    </div>
+						  </div>
+					  </div>
 
 
+				</div>
+
+			</div>
+
+		</div>
+
+	</section
+	>
+
+<script src="js/jquery-3.6.3.min.js"></script>
+<script src="js/bootstrap.js"></script>
 </body>
 </html>
