--- a/vishivka/info.html
+++ b/vishivka/info.html
@@ -6,6 +6,7 @@
 	<title>Вышивка</title>
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/uicons-brands.css">
+	<link rel="stylesheet" href="css/uicons-solid-rounded.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -15,24 +16,24 @@
 	<header class="header">
 		<div class="container">
 		 	<div class="row">
-			 	<nav class="nav header__nav">
+			 	<nav class="nav">
 	 		
 		 			<div class="col-2">
 		 				<div class="logo">
-		 					<img class="logo-img" src="img/logo-txt.svg" alt="Логотип">
+		 					<img class="logo__img" src="img/logo-txt.svg" alt="Логотип">
 		 				</div>
 		 			</div>
 
 		 			<div class="col-3 offset-7">
 		 				<div class="social">
 
-		 					<a class="social-link social-link__whatsapp" href="wa.me/79126833062?text=Здравствуйте%2C+я+хочу+заказать+вышивку" target="_blank"><i class="fi fi-brands-whatsapp"></i></a>
+		 					<a class="main-link main-link_whatsapp" href="https://wa.me/79126833062?text=Здравствуйте%2C+я+хочу+заказать+вышивку" target="_blank"><i class="fi fi-brands-whatsapp"></i></a>
 
-		 					<a class="social-link social-link__vk" href="vk.com/vishivka__196" target="_blank"><i class="fi fi-brands-vk"></i></a>
+		 					<a class="main-link main-link_vk" href="https://vk.com/vishivka__196" target="_blank"><i class="fi fi-brands-vk"></i></a>
 
-		 					<a class="social-link social-link__instagram" href="instagram.com/vishivka_196?igshid=ZDdkNTZiNTM=" target="_blank"><i class="fi fi-brands-instagram"></i></a>
+		 					<a class="main-link main-link_instagram" href="https://instagram.com/vishivka_196?igshid=ZDdkNTZiNTM=" target="_blank"><i class="fi fi-brands-instagram"></i></a>
 
-		 					<a href="#" class="social-link social__btn">Заказать</a>
+		 					<a href="#" class="main-link main-btn social__btn popup-btn">Заказать</a>
 
 		 				</div>
 		 			</div>
@@ -46,22 +47,22 @@
 	 			<div class="col-10 offset-1">
 	 				<ul class="nav-list">
 	 					<li class="nav-list-item">
- 							<a class="social-link" href="index.html">Главная</a>
+ 							<a class="main-link" href="index.html">Главная</a>
  						</li>
  						<li class="nav-list-item">
-	 						<a class="social-link" href="about.html">О нас</a>
+	 						<a class="main-link" href="about.html">О нас</a>
 	 					</li>
 	 					<li class="nav-list-item">
-	 						<a href="services.html" class="social-link">Услуги</a>
+	 						<a class="main-link" href="services.html">Услуги</a>
 	 					</li>
 	 					<li class="nav-list-item">
-	 						<a href="portfolio.html" class="social-link">Наши работы</a>
+	 						<a class="main-link" href="portfolio.html">Наши работы</a>
 	 					</li>
 	 					<li class="nav-list-item">
-	 						<a href="info.html" class="social-link social-link_active">Информация</a>
+	 						<a class="main-link main-link_active" href="info.html">Информация</a>
 	 					</li>
 	 					<li class="nav-list-item">
-	 						<a href="contacts.html" class="social-link">Контакты</a>
+	 						<a class="main-link" href="contacts.html">Контакты</a>
 	 					</li>
 	 				</ul>
 	 			</div>	
@@ -81,17 +82,19 @@
 			<div class="row">
 
 				<div class="col-10 offset-1">
-					<h2 class="title about-title">Информация</h2>
-					<h3 class="sub-title">Заказ</h3>
+					<h2 class="title">Информация</h2>
 					<p class="txt">
-						Индивидуальные заказы услуги вышивки рассчитываются по макету или техническому заданию Заказчика. Заявки принимаются в свободной форме на официальные мессенджеры компании <strong>"Vishivka_196"</strong> или через WhatsApp или Telegram.
-Цена вышивки определяется исходя из размеров вышивки, сложности рисунка, степени детализации, количества цветов, особенностей материала нанесения, тиража, особых условий заказа.
-Окончательная цена, макет и срок исполнения оговаривается и согласовывается с Заказчиком, и подтверждается письменно в переписке через электронную почту, официальные мессенджеры студии (ВК,Instagram, WhatsAp, Telegram).</p>
+	Услуги вышивки рассчитываются по макету или техническому заданию Заказчика. Заявки принимаются в свободной форме на официальные мессенджеры компании <strong>"Vishivka_196"</strong>, через <a class="main-link" href="https://vk.com/vishivka__196">ВК</a>, <a class="main-link" href="https://wa.me/79126833062?text=Здравствуйте%2C+я+хочу+заказать+вышивку">WhatsApp</a>, <a class="main-link" href="#">Telegram</a> или можно <a class="main-link popup-btn">заказать звонок</a> на сайте.
+
+	Цена вышивки определяется исходя из размеров вышивки, сложности рисунка, степени детализации, количества цветов, особенностей материала нанесения, тиража, особых условий заказа.
+	Окончательная цена, макет и срок исполнения оговаривается и согласовывается с Заказчиком, и подтверждается письменно в переписке через электронную почту, официальные мессенджеры студии: 
+(<a class="main-link" href="https://vk.com/vishivka__196">ВК</a>, <a class="main-link" href="https://instagram.com/vishivka_196?igshid=ZDdkNTZiNTM=">Instagram</a>, <a class="main-link" href="https://wa.me/79126833062?text=Здравствуйте%2C+я+хочу+заказать+вышивку">WhatsApp</a>, <a class="main-link" href="#">Telegram</a>).</p>
 
 				</div>
 
 			</div>
 
+<!-- Аккардионы -->
 			<div class="row">
 
 				<div class="col-5 offset-1">
@@ -103,7 +106,7 @@
 						        Оплата:
 						      </button>
 						    </h2>
-						    <div id="flush-collapseOne" class="accordion-collapse collapse info__accordion-body txt" aria-labelledby="flush-headingOne">
+						    <div id="flush-collapseOne" class="accordion-collapse collapse info__accordion-body" aria-labelledby="flush-headingOne">
 						      <div class="accordion-body accordion-item_bg">
 						      	<ol class="info__accordion-list">
 						      		<li class="li info__list-item">Оплата наличными средствами в офисе.</li>
@@ -125,7 +128,7 @@
 						      	Доставка:
 						      </button>
 						    </h2>
-						    <div id="flush-collapseTwo" class="accordion-collapse collapse info__accordion-body txt" aria-labelledby="flush-headingTwo">
+						    <div id="flush-collapseTwo" class="accordion-collapse collapse info__accordion-body" aria-labelledby="flush-headingTwo">
 						      <div class="accordion-body accordion-item_bg">
 						      	<ol class="info__accordion-list">
 						      		<li class="li info__list-item">Почтой России<span class="txt">(стоимость доставки от 250р, расчитывается индивидуально)</span></li>
@@ -146,10 +149,76 @@
 
 		</div>
 
-	</section
-	>
+	</section>
+	<hr>
+	<!-- Футер -->
+		<footer class="footer">
+			<div class="container">
+					
+				<div class="row">
+					<div class="col-12">
+						<p class="footer__txt">Vishivka_196 2023 &copy; Все права защищены. Копирование любых графических и текстовых материалов запрещено. Продолжая просмотр сайта, вы соглашаетесь на обработку персональных данных передаваемых через форму.</p>
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="col-3 offset-9">
+						<p class="footer__txt">Разработка сайта: <a href="https://vk.com/ziscander" class="footer__link">Александр Шмик</a></p>
+					</div>
+				</div>
+
+			</div>
+		</footer>
+
+<!-- Модальное окно -->
+	<div class="popup">
+		<div class="popup-dialog">
+			<div class="popup-content">
+				<button class="popup-close">&times;</button>
+				<h3 class="popup-header">Оставьте заявку <br> и мы свяжемся с Вами</h3>
+				<div class="popup-form-block">
+					<form action="#" class="popup-form">
+
+						<div class="input-box">
+							<input type="text" id="name" class="popup-form-input" required autocomplete="off"><i class="fi popup-form__fi fi-sr-picpeople-filled"></i>
+							<label for="name" class="popup-form-label">Ваше имя</label>
+						</div>
+
+						<div class="input-box">
+							<input type="number" id="phone" class="popup-form-input" required autocomplete="off"><i class="fi popup-form__fi fi-sr-call-incoming"></i>
+							<label for="phone" class="popup-form-label">Ваш телефон</label>
+						</div>
+
+						<button class="popup-form-btn main-btn social__btn">Отправить</button>
+
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
 
 <script src="js/jquery-3.6.3.min.js"></script>
 <script src="js/bootstrap.js"></script>
+
+<!-- модальное окно -->
+	<script>
+		$(document).ready(function(){
+					// модальное окно ОСТАВИТЬ ЗАЯВКУ
+			$('.popup-btn').on('click', function(event) {
+				event.preventDefault();
+				$('.popup').fadeIn('slow/900/fast', function() {
+				});
+				$('body').toggleClass('no-scroll');
+			});
+			$('.popup-close').on('click', function(event) {
+				event.preventDefault();
+				$('.popup').fadeOut('slow/400/fast', function() {
+				});
+				$('body').toggleClass('no-scroll');
+			});
+		});
+	</script>
+
+
 </body>
 </html>
