--- a/vishivka/about.html
+++ b/vishivka/about.html
@@ -16,24 +16,24 @@
 		<header class="header">
 			<div class="container">
 			 	<div class="row">
-				 	<nav class="nav header__nav">
-		 		
+				 	<nav class="nav">
+
 			 			<div class="col-2">
 			 				<div class="logo">
-			 					<img class="logo-img" src="img/logo-txt.svg" alt="Логотип">
+			 					<img class="logo__img" src="img/logo-txt.svg" alt="Логотип">
 			 				</div>
 			 			</div>
 
 			 			<div class="col-3 offset-7">
 			 				<div class="social">
 
-			 					<a class="social-link__whatsapp" href="https://wa.me/79126833062?text=Здравствуйте%2C+я+хочу+заказать+вышивку" target="_blank"><i class="fi fi-brands-whatsapp"></i></a>
+			 					<a class="main-link_whatsapp" href="https://wa.me/79126833062?text=Здравствуйте%2C+я+хочу+заказать+вышивку" target="_blank"><i class="fi fi-brands-whatsapp"></i></a>
 
-			 					<a class="social-link__vk" href="https://vk.com/vishivka__196" target="_blank"><i class="fi fi-brands-vk"></i></a>
+			 					<a class="main-link_vk" href="https://vk.com/vishivka__196" target="_blank"><i class="fi fi-brands-vk"></i></a>
 
-			 					<a class="social-link__instagram" href="https://instagram.com/vishivka_196?igshid=ZDdkNTZiNTM=" target="_blank"><i class="fi fi-brands-instagram"></i></a>
+			 					<a class="main-link_instagram" href="https://instagram.com/vishivka_196?igshid=ZDdkNTZiNTM=" target="_blank"><i class="fi fi-brands-instagram"></i></a>
 
-			 					<a href="#" class="social-link social__btn popup-btn">Заказать</a>
+			 					<a href="#" class="main-link main-btn social__btn popup-btn">Заказать</a>
 
 			 				</div>
 			 			</div>
@@ -44,29 +44,32 @@
 		 		</div>
 
 		 		<div class="row">
+
 		 			<div class="col-10 offset-1">
 		 				<ul class="nav-list">
 		 					<li class="nav-list-item">
-	 							<a class="social-link" href="index.html">Главная</a>
+	 							<a class="main-link" href="index.html">Главная</a>
 	 						</li>
 	 						<li class="nav-list-item">
-		 						<a class="social-link social-link_active" href="about.html">О нас</a>
+		 						<a class="main-link main-link_active" href="about.html">О нас</a>
 		 					</li>
 		 					<li class="nav-list-item">
-		 						<a href="services.html" class="social-link">Услуги</a>
+		 						<a class="main-link" href="services.html">Услуги</a>
 		 					</li>
 		 					<li class="nav-list-item">
-		 						<a href="portfolio.html" class="social-link">Наши работы</a>
+		 						<a class="main-link" href="portfolio.html">Наши работы</a>
 		 					</li>
 		 					<li class="nav-list-item">
-		 						<a href="info.html" class="social-link">Информация</a>
+		 						<a class="main-link" href="info.html">Информация</a>
 		 					</li>
 		 					<li class="nav-list-item">
-		 						<a href="contacts.html" class="social-link">Контакты</a>
+		 						<a class="main-link" href="contacts.html">Контакты</a>
 		 					</li>
 		 				</ul>
 		 			</div>	
+
 		 		</div>
+
 		 		<hr id="hr__down">
 
 			</div>
@@ -77,22 +80,21 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-10 offset-1">
-					<img src="#" alt="">
-					<h2 class="title about-title">О нас</h2>
+					<img src="#" alt=""> <!-- Нужна картинка -->
+					<h2 class="title">О нас</h2>
 					<p class="txt">
-	<strong>Студия Vishivka_196</strong> предлагает вам услуги качественной вышивки практически на любых материалах. На современном оборудовании ваши логотипы, знаки отличия, шевроны и эмблемы будут нанесены на кепки, майки, толстовки, рабочую одежду, чехлы и многое другое. 
+	<strong>Студия Vishivka_196</strong> предлагает вам услуги качественной вышивки практически на любых материалах.
+На современном оборудовании ваши логотипы, знаки отличия, шевроны и эмблемы будут нанесены на кепки, майки, толстовки, рабочую одежду, чехлы и многое другое. 
 
-Мы выполняем машинную вышивку в различных вариантах техники в зависимости от пожеланий заказчика. 
-
-Мы предлагаем вам уникальные работы на заказ по эскизу, разработанному специально для корпоративных атрибутов.
-						<h3 class="title about__title">Преимущества сотрудничества с Vishivka_196:</h3>
+	Мы выполняем машинную вышивку в различных вариантах техники в зависимости от пожеланий заказчика и предлагаем вам уникальные работы на заказ по эскизу, разработанному специально для корпоративных атрибутов.
+						<h3 class="sub-titlе about__sub-title">Преимущества сотрудничества с Vishivka_196:</h3>
 						<ul class="about__list">
-							<li class="about__item"> - Свое производство</li>
-							<li class="about__item"> - Оперативность (в расчетах, сроках, ответах)</li>
-							<li class="about__item"> - Индивидуальный подход</li>
-							<li class="about__item"> - Сами занимаемся разработкой дизайнов вышивки, что позволяет создавать и дорабатывать макеты по вашим пожеланиям.</li>
-							<li class="about__item"> - Доступные цены.</li>
-							<li class="about__item"> - Заказы от 1 ед.</li>
+							<li class="about__item txt"> - Свое производство</li>
+							<li class="about__item txt"> - Оперативность (в расчетах, сроках, ответах)</li>
+							<li class="about__item txt"> - Индивидуальный подход</li>
+							<li class="about__item txt"> - Сами занимаемся разработкой дизайнов вышивки, что позволяет создавать и дорабатывать макеты по вашим пожеланиям.</li>
+							<li class="about__item txt"> - Доступные цены.</li>
+							<li class="about__item txt"> - Заказы от 1 ед.</li>
 						</ul>
 					</p>
 				</div>
@@ -100,6 +102,74 @@
 		</div>
 	</section>
 
+	<hr>
+<!-- Футер -->
+	<footer class="footer">
+		<div class="container">
+				
+			<div class="row">
+				<div class="col-12">
+					<p class="footer__txt">Vishivka_196 2023 &copy; Все права защищены. Копирование любых графических и текстовых материалов запрещено. Продолжая просмотр сайта, вы соглашаетесь на обработку персональных данных передаваемых через форму.</p>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-3 offset-9">
+					<p class="footer__txt">Разработка сайта: <a href="https://vk.com/ziscander" class="footer__link">Александр Шмик</a></p>
+				</div>
+			</div>
+
+		</div>
+	</footer>
+
+	<!-- Модальное окно -->
+		<div class="popup">
+			<div class="popup-dialog">
+				<div class="popup-content">
+					<button class="popup-close">&times;</button>
+					<h3 class="popup-header">Оставьте заявку <br> и мы свяжемся с Вами</h3>
+					<div class="popup-form-block">
+						<form action="#" class="popup-form">
+
+							<div class="input-box">
+								<input type="text" id="name" class="popup-form-input" required autocomplete="off"><i class="fi popup-form__fi fi-sr-picpeople-filled"></i>
+								<label for="name" class="popup-form-label">Ваше имя</label>
+							</div>
+
+							<div class="input-box">
+								<input type="number" id="phone" class="popup-form-input" required autocomplete="off"><i class="fi popup-form__fi fi-sr-call-incoming"></i>
+								<label for="phone" class="popup-form-label">Ваш телефон</label>
+							</div>
+
+							<button class="popup-form-btn main-btn social_btn">Отправить</button>
+
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+
+	<script src="js/jquery-3.6.3.min.js"></script>
+	<script src="js/bootstrap.js"></script>
+
+	<!-- инициализация модального окна -->
+		<script>
+			$(document).ready(function(){
+						// модальное окно ОСТАВИТЬ ЗАЯВКУ
+				$('.popup-btn').on('click', function(event) {
+					event.preventDefault();
+					$('.popup').fadeIn('slow/900/fast', function() {
+					});
+					$('body').toggleClass('no-scroll');
+				});
+				$('.popup-close').on('click', function(event) {
+					event.preventDefault();
+					$('.popup').fadeOut('slow/400/fast', function() {
+					});
+					$('body').toggleClass('no-scroll');
+				});
+			});
+		</script>
 
 </body>
 </html>
