--- a/vishivka/about.html
+++ b/vishivka/about.html
@@ -89,12 +89,13 @@
 	Мы выполняем машинную вышивку в различных вариантах техники в зависимости от пожеланий заказчика и предлагаем вам уникальные работы на заказ по эскизу, разработанному специально для корпоративных атрибутов.
 						<h3 class="sub-titlе about__sub-title">Преимущества сотрудничества с Vishivka_196:</h3>
 						<ul class="about__list">
-							<li class="about__item txt"> - Свое производство</li>
-							<li class="about__item txt"> - Оперативность (в расчетах, сроках, ответах)</li>
-							<li class="about__item txt"> - Индивидуальный подход</li>
-							<li class="about__item txt"> - Сами занимаемся разработкой дизайнов вышивки, что позволяет создавать и дорабатывать макеты по вашим пожеланиям.</li>
-							<li class="about__item txt"> - Доступные цены.</li>
-							<li class="about__item txt"> - Заказы от 1 ед.</li>
+							<li class="about__item txt">- Свое производство</li>
+							<li class="about__item txt">- Оперативность (в расчетах, сроках, ответах)</li>
+							<li class="about__item txt">- Индивидуальный подход</li>
+							<li class="about__item txt">- Сами занимаемся разработкой дизайнов вышивки,
+    что позволяет создавать и дорабатывать макеты по вашим пожеланиям.</li>
+							<li class="about__item txt">- Доступные цены.</li>
+							<li class="about__item txt">- Заказы от 1 ед.</li>
 						</ul>
 					</p>
 				</div>
