--- a/vishivka/contacts.html
+++ b/vishivka/contacts.html
@@ -78,7 +78,7 @@
 		<div class="container">
 
 			<div class="section-header">
-				<h2 class="title text-start">Контакты</h2>
+				<h2 class="title text-start d-inline-block">Контакты</h2>
 			</div>
 
 			<div class="row">
@@ -88,16 +88,16 @@
 						
 						<div class="col-6">
 							<adress class="adress">
-								<h4 class="contacts__title">Адрес:</h4>
-								<p class="txt">г. Екатеринбург, пер. Автоматики 4Б, офис 235</p>
+								<div class="contacts__block"><h2 class="contacts__title">Адрес:</h2>
+																<p class="txt">г. Екатеринбург, пер. Автоматики 4Б, офис 235</p></div>
 							</adress>
-							<p class="contacts__title">Телефон: <a href="" class="txt main-link">8 (912) 683 30 62</a></p>
+							<div class="contacts__block"><h3 class="contacts__title">Телефон:</h3><a href="tel:89126833062" class="txt main-link">8 (912) 683 30 62</a></div>
 						</div>
 
 						<div class="col-5 offset-1">
-							<h4 class="contacts__title">Режим работы:</h4>
-							<p class="txt">Пн-Пт: 10:00 - 19:00</p>
-							<p class="contacts__title">E-mail: <a href="mailto:vishivka196@mail.ru" class="txt main-link">Vishivka196@mail.ru</a></p>
+							<div class="contacts__block"><h2 class="contacts__title">Режим работы:</h2>
+														<p class="txt">Пн-Пт: 10:00 - 19:00</p></div>
+							<div class="contacts__block"><h3 class="contacts__title">E-mail:</h3> <a href="mailto:vishivka196@mail.ru" class="txt main-link">Vishivka196@mail.ru</a></div>
 						</div>
 
 
@@ -115,20 +115,17 @@
 							</div>
 						</div>
 						<div class="col-5 offset-1">
-							<a href="#" class="main-link main-btn contacts__btn popup-btn">заказать звонок</a></div>
+							<a href="#" class="main-link main-btn contacts__btn popup-btn">заказать звонок</a>
+						</div>
 					</div>
 				</div>
 
 			</div>
-
-
-
-
+		<div class="map">
+			<iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A398ecbef97e1c87cea2cc213fddc72d1f6375ce52c4523167bc199c7acab7ba3&amp;source=constructor"></iframe>
+		</div>
 		</div>
 	</section>
-	<div class="map">
-		<iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A398ecbef97e1c87cea2cc213fddc72d1f6375ce52c4523167bc199c7acab7ba3&amp;source=constructor"></iframe>
-	</div>
 
 	<hr>
 <!-- Футер -->
