--- a/vishivka/info.html
+++ b/vishivka/info.html
@@ -114,10 +114,10 @@
 	      	<h2 class="titlе">Доставка:</h2>
 
 	      	<ol class="info__accordion-list">
-	      		<li class="li info__list-item">Почтой России<span class="txt">(стоимость доставки от 250р, расчитывается индивидуально)</span></li>
-	      		<li class="li info__list-item">Курьерской службой СДЭК<span class="txt">(стоимость доставки от 300р)</span></li>
+	      		<li class="li info__list-item">Почтой России (стоимость доставки от 250р, расчитывается индивидуально)</li>
+	      		<li class="li info__list-item">Курьерской службой СДЭК(стоимость доставки от 300р)</li>
 	      		<li class="li info__list-item">Транспортными компаниями, дополнительно оплачивается забор груза с производства.</li>
-	      		<li class="li info__list-item">По Екатеринбургу доставка возможна сервисом Яндекс.Доставка<span class="txt">(по тарифам перевозчика)</span>.</li>
+	      		<li class="li info__list-item">По Екатеринбургу доставка возможна сервисом Яндекс.Доставка(по тарифам перевозчика).</li>
 	      		<li class="li info__list-item">Самовывоз из офиса компании.</li>
 	      	</ol>
 
