--- a/vishivka/services/flex-flok.html
+++ b/vishivka/services/flex-flok.html
@@ -126,6 +126,25 @@
 		— выдерживает до 40 стирок.</p>
 			</div>
 		</div>
+
+		<div class="row">
+			<div class="col-8 offset-4">
+				<div class="services__post-block">
+					<div class="row">
+						<div class="col-4">
+							<img class="services__post-img" src="flex-flok-img/01.jpg" alt="флекс и флок">
+						</div>
+						<div class="col-4">
+							<img class="services__post-img" src="flex-flok-img/02.jpg" alt="флекс и флок">
+						</div>
+						<div class="col-4">
+							<img class="services__post-img" src="flex-flok-img/03.jpg" alt="флекс и флок">
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
 	</div>
 </section>
 
