--- a/vishivka/services/sublimacion.html
+++ b/vishivka/services/sublimacion.html
@@ -115,6 +115,25 @@
 		   </p>
 			</div>
 		</div>
+
+		<div class="row">
+			<div class="col-8 offset-4">
+				<div class="services__post-block">
+					<div class="row">
+						<div class="col-4">
+							<img class="services__post-img" src="sublimacion-img/01.jpg" alt="сублимация">
+						</div>
+						<div class="col-4">
+							<img class="services__post-img" src="sublimacion-img/02.jpg" alt="сублимация">
+						</div>
+						<div class="col-4">
+							<img class="services__post-img" src="sublimacion-img/03.jpg" alt="сублимация">
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
 	</div>
 </section>
 
