--- a/vishivka/info.html
+++ b/vishivka/info.html
@@ -83,18 +83,15 @@
 
 				<div class="col-10 offset-1">
 					<h2 class="title">Информация</h2>
-					<p class="txt">
-	Услуги вышивки рассчитываются по макету или техническому заданию Заказчика. Заявки принимаются в свободной форме на официальные мессенджеры компании <strong>"Vishivka_196"</strong>, через <a class="main-link" href="https://vk.com/vishivka__196">ВК</a>, <a class="main-link" href="https://wa.me/79126833062?text=Здравствуйте%2C+я+хочу+заказать+вышивку">WhatsApp</a>, <a class="main-link" href="#">Telegram</a> или можно <a class="main-link popup-btn">заказать звонок</a> на сайте.
+					<p class="txt">	Услуги вышивки рассчитываются по макету или техническому заданию Заказчика. Заявки принимаются в свободной форме на официальные мессенджеры компании <strong>"Vishivka_196"</strong>, через <a class="main-link" href="https://vk.com/vishivka__196">ВК</a>, <a class="main-link" href="https://wa.me/79126833062?text=Здравствуйте%2C+я+хочу+заказать+вышивку">WhatsApp</a>, <a class="main-link" href="https://t.me/misster_xx">Telegram</a> или можно <a class="main-link popup-btn">заказать звонок</a> на сайте.
 
 	Цена вышивки определяется исходя из размеров вышивки, сложности рисунка, степени детализации, количества цветов, особенностей материала нанесения, тиража, особых условий заказа.
-	Окончательная цена, макет и срок исполнения оговаривается и согласовывается с Заказчиком, и подтверждается письменно в переписке через электронную почту, официальные мессенджеры студии: 
-(<a class="main-link" href="https://vk.com/vishivka__196">ВК</a>, <a class="main-link" href="https://instagram.com/vishivka_196?igshid=ZDdkNTZiNTM=">Instagram</a>, <a class="main-link" href="https://wa.me/79126833062?text=Здравствуйте%2C+я+хочу+заказать+вышивку">WhatsApp</a>, <a class="main-link" href="#">Telegram</a>).</p>
+	Окончательная цена, макет и срок исполнения оговаривается и согласовывается с Заказчиком, и подтверждается письменно в переписке через электронную почту, официальные мессенджеры студии: (<a class="main-link" href="https://vk.com/vishivka__196">ВК</a>, <a class="main-link" href="https://instagram.com/vishivka_196?igshid=ZDdkNTZiNTM=">Instagram</a>, <a class="main-link" href="https://wa.me/79126833062?text=Здравствуйте%2C+я+хочу+заказать+вышивку">WhatsApp</a>, <a class="main-link" href="https://t.me/misster_xx">Telegram</a>).</p>
 
 				</div>
 
 			</div>
-
-<!-- Аккардионы -->
+			<br>
 			<div class="row">
 
 				<div class="col-5 offset-1">
@@ -105,7 +102,7 @@
 	      	<ol class="info__accordion-list">
 	      		<li class="li info__list-item">Оплата наличными средствами в офисе.</li>
 	      		<li class="li info__list-item">Оплата на расчетный счет.</li>
-	      		<li class="li info__list-item">Оплата через сервис СБП по номеру телефон.</li>
+	      		<li class="li info__list-item">Оплата через сервис СБП по номеру телефона.</li>
 	      	</ol>
 
 				</div>
@@ -117,7 +114,7 @@
 	      		<li class="li info__list-item">Почтой России (стоимость доставки от 250р, расчитывается индивидуально)</li>
 	      		<li class="li info__list-item">Курьерской службой СДЭК(стоимость доставки от 300р)</li>
 	      		<li class="li info__list-item">Транспортными компаниями, дополнительно оплачивается забор груза с производства.</li>
-	      		<li class="li info__list-item">По Екатеринбургу доставка возможна сервисом Яндекс.Доставка(по тарифам перевозчика).</li>
+	      		<li class="li info__list-item">По Екатеринбургу доставка возможна сервисом Яндекс.Доставка (по тарифам перевозчика).</li>
 	      		<li class="li info__list-item">Самовывоз из офиса компании.</li>
 	      	</ol>
 
