--- a/vishivka/services/shevron.html
+++ b/vishivka/services/shevron.html
@@ -101,8 +101,7 @@
 			<div class="col-8 offset-4">
 				<img class="services__img" src="../img/shevron.jpg" alt="Шеврон">
 				<h3 class="title">Шеврон</h3>
-				<p class="txt">
-	<b>Шеврон (нашивка)</b> — это тканевый отрезок различной формы с нанесенным изображением.
+				<p class="txt">	<b>Шеврон (нашивка)</b> — это тканевый отрезок различной формы с нанесенным изображением.
 
 <b>Типы шевронов в зависимости от технологии изображения:</b>
 
