--- a/vishivka/services/sublimacion.html
+++ b/vishivka/services/sublimacion.html
@@ -101,8 +101,7 @@
 			<div class="col-8 offset-4">
 				<img class="services__img" src="../img/sublimacion.png" alt="Вышивка">
 				<h3 class="title">Сублимационная печать</h3>
-				<p class="txt">
-	Метод непрямой полноцветной печати на светлых синтетических тканях, содержащих не менее 60% полиэстера, или на изделиях из двуслойных материалов (внутренний слой — хлопок, внешний — полиэстер).
+				<p class="txt">	Метод непрямой полноцветной печати на светлых синтетических тканях, содержащих не менее 60% полиэстера, или на изделиях из двуслойных материалов (внутренний слой — хлопок, внешний — полиэстер).
 
 	Изображение сначала наносится на специальную бумагу, а затем с помощью термопресса при температуре 180-200°C на запечатываемую поверхность. Изображения получаются яркими, насыщенными и износостойкими. Краска проникает в волокна, что обеспечивает устойчивость к выцветанию, стиркам и механическим воздействиям. 
 
